[package]
name = "numberer"
version = "0.1.1"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Turn things into numbers and numbers into things"
homepage = "https://github.com/stickeritis/numberer"
edition = "2018"
# Use after SPDX list is updated
# license = "BlueOak-1.0.0"
license-file = "LICENSE.md"

exclude = [
  ".gitignore",
  ".github",
  ".envrc",
  "shell.nix",
]

[dependencies]
serde = "1"
serde_derive = "1"
