[package]
name = "numberer"
version = "0.2.1"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Turn things into numbers and numbers into things"
homepage = "https://github.com/stickeritis/numberer"
edition = "2018"
license = "MIT OR Apache-2.0"

exclude = [
  ".gitignore",
  ".github",
  ".envrc",
]

[dependencies]
serde = "1"
serde_derive = "1"

[dev-dependencies]
serde_cbor = "0.11"
